test: Update after env variable changes